<resources>
    <string name="app_name">Parc Ferme</string>

    <string name="drivers">Drivers</string>
    <string name="constructors">Constructors</string>
    <string name="races">Races</string>
    <string name="standings">Standings</string>

    <string-array name="result_type">
        <item>Race</item>
        <item>Qualifying</item>
    </string-array>
    <string-array name="standing_type">
        <item>Drivers</item>
        <item>Constructors</item>
    </string-array>

    <string name="driver_full_name">%1$s %2$s</string>

    <string name="standing_points">%1$s Points</string>
    <string name="standing_wins">%1$s Wins</string>

    <string name="list_season_default">Season</string>
    <string name="standing_list_drivers">Drivers</string>
    <string name="standing_list_constructors">Constructors</string>

    <string name="season_timestamp_key">season_cache_timestamp</string>
    <string name="driver_timestamp_key">driver_cache_timestamp</string>
    <string name="constructor_timestamp_key">constructor_cache_timestamp</string>
    <string name="race_timestamp_key">race_cache_timestamp</string>
    <string name="race_result_timestamp_key">race_result_cache_timestamp</string>
    <string name="qualifying_result_timestamp_key">qualifying_result_cache_timestamp</string>
    <string name="driver_standing_timestamp_key">driver_standing_cache_timestamp</string>
    <string name="constructor_standing_timestamp_key">constructor_standing_cache_timestamp</string>
</resources>